deployment-v2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
      version: v2

  template:
    metadata:
      labels:
        app: nginx
        version: v2

    spec:
      containers:
      - name: nginx
        image: nginx

        command:
        - /bin/sh
        - -c
        - |
          echo "<h1>NGINX VERSION 2</h1>" > /usr/share/nginx/html/index.html
          nginx -g 'daemon off;'

        ports:
        - containerPort: 80
