service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  selector:
    app: nginx

  ports:
  - port: 80
    targetPort: 80
