VirtualService.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService

metadata:
  name: nginx

spec:
  hosts:
  - "*"

  gateways:
  - nginx-gateway

  http:
  - route:
    - destination:
        host: nginx
        subset: v1
        port:
          number: 80
      weight: 50

    - destination:
        host: nginx
        subset: v2
        port:
          number: 80
      weight: 50
